--- a/tethysapp/wqm/templates/wqm/components/administration/license.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/license.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="content-box__content" id="content-box__license">
     <div class="alert alert-info" role="alert">
         <b>Tổng số Giấy phép: <span id="licenses-total"></span></b> - Còn hạn: <span id="licenses-valid"></span> - Sắp
@@ -100,7 +102,7 @@
 
         <div id="ms-point-data" class="d-none">
             <div class="point-data__nav">
-                <h6>Thông tin điểm khai thác</h6>
+                <h6>Thông tin điểm quan trắc</h6>
                 <div id="ms-point-data__close-btn">
                     <i class="bi bi-x"></i>
                 </div>
@@ -114,6 +116,25 @@
             </div>
             
             <canvas id="license-wqi-chart"></canvas>
+        </div>
+
+        
+        <div class="legend">
+            <p class="mb-2"><b>Chú thích</b></p>
+
+            <div class="legend-item">
+                <div>
+                    <img src="{% static 'wqm/images/diem_khai_thac_nuoc.png' %}" width="16" />
+                </div>
+                <span class="legend-text">Điểm khai thác nước</span>
+            </div>
+
+            <div class="legend-item">
+                <div>
+                    <img src="{% static 'wqm/images/diem_quan_trac.png' %}" width="16" />
+                </div>
+                <span class="legend-text">Điểm quan trắc nước</span>
+            </div>
         </div>
     </div>
 </div>
