--- a/tethysapp/wqm/templates/wqm/pages/home.html
+++ b/tethysapp/wqm/templates/wqm/pages/home.html
@@ -26,7 +26,7 @@
 
         <div id="point-data" class="d-none">
             <div class="point-data__nav">
-                <h6>Thông tin điểm khai thác</h6>
+                <h6>Thông tin điểm quan trắc</h6>
                 <div id="point-data__close-btn">
                     <i class="bi bi-x"></i>
                 </div>
@@ -75,6 +75,13 @@
                 <span class="legend-text">Rất tốt</span>
             </div>
 
+            <div class="legend-item">
+                <div>
+                    <img src="{% static 'wqm/images/diem_khai_thac_nuoc.png' %}" width="16" />
+                </div>
+                <span class="legend-text">Điểm khai thác nước</span>
+            </div>
+
             <div class="time-demension">
                 <button id="play-button" class="btn play-button"><i class="bi bi-play"></i></button>
                 <div id="slider-container" class="slider-container">
@@ -103,6 +110,8 @@
 <script src="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="{% static 'wqm/js/pages/home.js' %}" type="text/javascript"></script>
 
 {% endblock %}
