--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -9,9 +9,8 @@
 
   {% block styles %}
   <link rel="stylesheet" href="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.min.css' %}" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="icon" type="image/x-icon" href="{% static 'wqm/images/favicon.ico' %}">
-  <link href="{% static 'wqm/css/main.css' %}" rel="stylesheet" />
+  <link rel="stylesheet" href="{% static 'wqm/css/main.css' %}" />
   {% endblock %}
 </head>
 
@@ -19,27 +18,18 @@
   <div class="main">
     <div class="header-bar">
       <div class="header-bar__left">
-        <a class="logo" href="/apps/wqm"><img src="{% static 'wqm/images/logo.png' %}" /> </a>
+        <a class="logo" href="/apps/wqm"><img src="{% static 'wqm/images/logo.png' %}" alt="Logo" /></a>
         <div class="header-bar__name">{{ tethys_app.name }}</div>
       </div>
       <div class="header-bar__right">
         <ul class="nav-bar">
-          <!-- <a class="nav-bar__item" id="home-menu" href="/apps/wqm">
-            <li>
-              Bảng tổng quan
-            </li>
-          </a> -->
-
-          <a class="nav-bar__item" id="admin-menu" href="/apps/wqm/administration">
-            <li>
+          <li class="nav-bar__item">
+            <a id="admin-menu" href="/apps/wqm/administration">
               <i class="bi bi-gear-fill"></i>
-            </li>
-          </a>
-
+            </a>
+          </li>
         </ul>
-
         <div class="header-user__avatar"><img src="{% static 'wqm/images/avatar.png' %}" alt="Avatar" /></div>
-        
       </div>
     </div>
 
@@ -47,27 +37,13 @@
       {% block content %} {% endblock %}
     </div>
   </div>
+
+  {% block scripts %}
+  <script src="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery.min.js' %}"></script>
+  <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery-ui.min.js' %}"></script>
+  <script src="{% static 'wqm/js/main.js' %}"></script>
+  {% endblock %}
 </body>
-
-{% block templates %}
-<template id="loading-component">
-    <div class="loading loading--block" style="opacity: 0.6;">
-        <div class="loading__icon spinner-border text-primary" role="status">
-            <span class="visually-hidden">Loading...</span>
-        </div>
-    </div>
-</template>
-{% endblock %}
-
-
-{% block scripts %}
-<script src="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'wqm/vendors/jquery@3.7.1/jquery.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'wqm/vendors/jquery@3.7.1/jquery-ui.min.js' %}" type="text/javascript"></script>
-
-
-<script src="{% static 'wqm/js/main.js' %}" type="text/javascript"></script>
-
-{% endblock %}
 
 </html>
