--- a/tethysapp/wqm/public/css/main.css
+++ b/tethysapp/wqm/public/css/main.css
@@ -70,7 +70,7 @@ body>div:first-child {
 
 
 .nav-bar .nav-bar__item {
-    padding: 0px 24px;
+    padding: 0px 12px;
     line-height: 48px;
     color: #fff;
     text-decoration: none;
@@ -82,4 +82,56 @@ body>div:first-child {
 .header-bar__name a {
     color: white;
     text-decoration: none;
+}
+
+.content {
+    margin-top: 48px;
+    height: calc(100% - 48px);
+}
+
+.content-box__content div.dt-container .dt-input {
+    border-radius: 0;
+    margin-left: 8px;
+}
+
+.alert.alert-info {
+    border-radius: 0;
+    margin-bottom: 6px;
+}
+
+.maplibregl-compact {
+    display: none !important;
+}
+
+.tag-circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+
+.dropdown-menu {
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.legend {
+    position: absolute;
+    right: 8px;
+    bottom: 8px;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 10;
+    width: 300px;
+}
+
+.legend-item {
+    margin-left: 8px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.legend-text {
+    margin-left: 8px;
 }
