--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -8,8 +8,9 @@
   <title>{{ tethys_app.name }}</title>
 
   {% block styles %}
-  <link rel="stylesheet" href="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.min.css' %}" />
   <link rel="icon" href="{% static 'wqm/images/favicon.ico' %}">
+  <link rel="stylesheet" href="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.css' %}" />
   <link rel="stylesheet" href="{% static 'wqm/css/main.css' %}" />
   {% endblock %}
 </head>
@@ -29,13 +30,15 @@
       </div>
       <div class="header-bar__right">
         <ul class="nav-bar">
-          <li class="nav-bar__item">
-            <a id="admin-menu" href="/apps/wqm/settings">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+          <a id="admin-menu" href="/apps/wqm/settings">
+            <li class="nav-bar__item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-gear-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
               </svg>
-            </a>
-          </li>
+            </li>
+          </a>
         </ul>
         <div class="header-user__avatar"><img src="{% static 'wqm/images/avatar.png' %}" alt="Avatar" /></div>
       </div>
@@ -50,6 +53,7 @@
   <script src="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery.min.js' %}"></script>
   <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery-ui.min.js' %}"></script>
+  <script src="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.js' %}" type="text/javascript"></script>
   <script src="{% static 'wqm/js/main.js' %}"></script>
   {% endblock %}
 </body>
