--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -30,7 +30,7 @@
       </div>
       <div class="header-bar__right">
         <ul class="nav-bar">
-          <a id="admin-menu" href="/apps/wqm/settings">
+          <a href="/apps/wqm/settings">
             <li class="nav-bar__item">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-gear-fill"
                 viewBox="0 0 16 16">
