--- a/tethysapp/wqm/public/css/main.css
+++ b/tethysapp/wqm/public/css/main.css
@@ -140,3 +140,8 @@ body > div:first-child {
 .legend-text {
     margin-left: 8px;
 }
+
+.btn.btn-success {
+    padding: 4px 8px;
+    margin-right: 4px;
+}
