--- a/tethysapp/wqm/public/css/pages/settings.css
+++ b/tethysapp/wqm/public/css/pages/settings.css
@@ -50,3 +50,48 @@
     padding: 16px;
     font-size: 14px;
 }
+
+
+.filter-box {
+    display: flex;
+    gap: 8px;
+    margin-bottom: 8px;
+}
+
+.filter-box__item {
+    width: 25%;
+}
+
+.filter-box__item label {
+    margin-bottom: 4px;
+}
+
+.filter-box__item input, .filter-box__item select {
+    border-radius: 0px;
+}
+
+#total-flow-chart {
+    flex: 1;
+    width: 100%;
+    margin: 4px 0;
+}
+
+.filter-box__item.filter-box__buttons {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+
+
+.filter-box__item.filter-box__buttons button {
+    height: 36px;
+    border-radius: 0px;
+    font-size: 14px;
+    color: #fff;
+    padding: 4px 8px;
+}
+
+.filter-box__item.filter-box__buttons button i{
+    margin-right: 4px;
+    font-size: 16px;
+}
