--- a/tethysapp/wqm/templates/wqm/pages/settings.html
+++ b/tethysapp/wqm/templates/wqm/pages/settings.html
@@ -32,12 +32,16 @@
 
 {% block styles %}
 {{ block.super }}
+<link href="{% static 'wqm/vendors/datatables@2.0.7/dataTables.css' %}" rel="stylesheet" />
 <link href="{% static 'wqm/css/pages/settings.css' %}" rel="stylesheet" />
 
 {% endblock %}
 
 {% block scripts %}
 {{ block.super }}
+<script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
+
+<script src="{% static 'wqm/js/components/settings/license.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/pages/settings.js' %}" type="text/javascript"></script>
 
 {% endblock %}
