--- a/tethysapp/wqm/templates/wqm/components/settings/license.html
+++ b/tethysapp/wqm/templates/wqm/components/settings/license.html
@@ -7,8 +7,8 @@
     <div>
         <div class="filter-box">
             <div class="filter-box__item">
-                <label for="keyword">Từ khóa</label>
-                <input class="form-control" id="keyword" placeholder="Nhập từ khoá tìm kiếm" />
+                <label for="search-licene-input">Từ khóa</label>
+                <input class="form-control" id="search-licene-input" placeholder="Nhập từ khoá tìm kiếm" />
             </div>
             <div class="filter-box__item">
                 <label for="license-province">Tỉnh</label>
