--- a/tethysapp/wqm/templates/wqm/pages/dashboard.html
+++ b/tethysapp/wqm/templates/wqm/pages/dashboard.html
@@ -19,7 +19,7 @@
     <iframe class="dashboard-box" src="https://dashboard.mkdc.vn/superset/dashboard/p/wo4GgpRvPzX?standalone=3&show_filters=0" frameborder="0"></iframe>
 
     <div id="dashboard-map">
-        <div id="map"></div>
+        <div id="map" class="map"></div>
         <div class="legend">
             <p class="mb-2"><b>Điểm khai thác nước</b></p>
 
