--- a/tethysapp/wqm/templates/wqm/pages/settings.html
+++ b/tethysapp/wqm/templates/wqm/pages/settings.html
@@ -40,7 +40,7 @@
 {% block scripts %}
 {{ block.super }}
 <script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
-
+<script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/settings/license.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/pages/settings.js' %}" type="text/javascript"></script>
 
