--- a/tethysapp/wqm/templates/wqm/pages/settings.html
+++ b/tethysapp/wqm/templates/wqm/pages/settings.html
@@ -7,7 +7,7 @@
         <i class="bi bi-file-earmark-fill"></i>
         <p>Giấy phép Tài nguyên nước</p>
     </div>
-    <div class="menu-box__item" id="menu-monitor-station">
+    <div class="menu-box__item" id="menu-station">
         <i class="bi bi-hdd-network-fill"></i>
         <p>Thiết lập điểm quan trắc</p>
     </div>
@@ -42,6 +42,9 @@
 <script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/settings/license.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/js/components/settings/station.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/js/components/settings/config.js' %}" type="text/javascript"></script>
+
 <script src="{% static 'wqm/js/pages/settings.js' %}" type="text/javascript"></script>
 
 {% endblock %}
