--- a/tethysapp/wqm/templates/wqm/components/settings/station.html
+++ b/tethysapp/wqm/templates/wqm/components/settings/station.html
@@ -11,34 +11,34 @@
     <div>
         <div class="filter-box">
             <div class="filter-box__item">
-                <label for="station-keyword">Từ khóa</label>
-                <input class="form-control" id="station-keyword" placeholder="Nhập từ khoá tìm kiếm" />
+                <label for="search-station-input">Từ khóa</label>
+                <input class="form-control" id="search-station-input" placeholder="Nhập từ khoá tìm kiếm" />
             </div>
             <div class="filter-box__item">
                 <label for="station-province">Tỉnh</label>
                 <select id="station-province" class="form-control" aria-label="Default select example">
-                    <option selected>Tất cả</option>
-                    <option value="1">Tỉnh Trà Vinh</option>
-                    <option value="2">Tỉnh An Giang</option>
-                    <option value="3">Tỉnh Bạc Liêu</option>
-                    <option value="4">Tỉnh Bến Tre</option>
-                    <option value="5">Tỉnh Cà Mau</option>
-                    <option value="6">Tỉnh Đồng Tháp</option>
-                    <option value="7">Tỉnh Hậu Giang</option>
-                    <option value="8">Tỉnh Kiên Giang</option>
-                    <option value="9">Tỉnh Long An</option>
-                    <option value="10">Tỉnh Sóc Trăng</option>
-                    <option value="11">Tỉnh Tiền Giang</option>
-                    <option value="12">Tỉnh Vĩnh Long</option>
-                    <option value="13">Thành phố Cần Thơ</option>
+                    <option value="-1" selected>Tất cả</option>
+                    <option value="80">Tỉnh Long An</option>
+                    <option value="82">Tỉnh Tiền Giang</option>
+                    <option value="83">Tỉnh Bến Tre</option>
+                    <option value="84">Tỉnh Trà Vinh</option>
+                    <option value="86">Tỉnh Vĩnh Long</option>
+                    <option value="87">Tỉnh Đồng Tháp</option>
+                    <option value="89">Tỉnh An Giang</option>
+                    <option value="91">Tỉnh Kiên Giang</option>
+                    <option value="92">Thành phố Cần Thơ</option>
+                    <option value="93">Tỉnh Hậu Giang</option>
+                    <option value="94">Tỉnh Sóc Trăng</option>
+                    <option value="95">Tỉnh Bạc Liêu</option>
+                    <option value="96">Tỉnh Cà Mau</option>
                 </select>
             </div>
             <div class="filter-box__item">
                 <label for="station-status">Trạng thái</label>
                 <select id="station-status" class="form-control" aria-label="Default select example">
-                    <option selected>Tất cả</option>
+                    <option value="-1" selected>Tất cả</option>
                     <option value="1">Hoạt động</option>
-                    <option value="2">Không hoạt động</option>
+                    <option value="0">Không hoạt động</option>
                 </select>
             </div>
             <div class="filter-box__item filter-box__buttons">
